Grease Pencil: Selecting strokes in Edit Mode imprecise if layer transforms are animated #101564

Closed
opened 2022-10-02 22:22:10 +02:00 by Julien Kaspar · 5 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-30 22:40, hash: 206dead860
Worked: (newest version of Blender that worked as expected)

Short description of error
I repeatedly notices that editing and selecting strokes across various modes became unreliable once the layer transformations have been animated.
The tools seem to target a single keyframed position of the strokes instead of the one that is visible on the current frame.
The easiest way to reproduce this though is in Edit Mode with selecting stroke points.

Exact steps for others to reproduce the error

  • Add a grease pencil stroke
  • Key the X location of the layer transformations (in the object data)
  • Go to frame 20 and key the X location of the layer on "2m"
  • Enter Edit Mode and box select the stroke points (This should work fine)
  • Change the current frame to 0 and try selecting the stroke points again (Now the selection is off)
**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-30 22:40, hash: `206dead860` Worked: (newest version of Blender that worked as expected) **Short description of error** I repeatedly notices that editing and selecting strokes across various modes became unreliable once the layer transformations have been animated. The tools seem to target a single keyframed position of the strokes instead of the one that is visible on the current frame. The easiest way to reproduce this though is in Edit Mode with selecting stroke points. **Exact steps for others to reproduce the error** - Add a grease pencil stroke - Key the X location of the layer transformations (in the object data) - Go to frame 20 and key the X location of the layer on "2m" - Enter Edit Mode and box select the stroke points (This should work fine) - Change the current frame to 0 and try selecting the stroke points again (Now the selection is off)
Poster
Collaborator

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Antonio Vazquez self-assigned this 2022-10-03 10:51:22 +02:00

This issue was referenced by fb499916bb

This issue was referenced by fb499916bb8fcacc08097754a61226ae84a516f1

This issue was referenced by 83ebf6a811

This issue was referenced by 83ebf6a81118650f02a6629c2bbb3f79dee7be89

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101564
There is no content yet.