Fix T101564: GPencil: Selecting imprecise if transforms are animated

The check was doing with the original point and
must be the evaluated point.