source/blender/editors/gpencil/gpencil_select.c
@@ -2072,7 +2072,7 @@ static bool gpencil_generic_stroke_select(bContext *C,
       bGPDspoint *pt_active = (pt->runtime.pt_orig) ? pt->runtime.pt_orig : pt;
 
       /* Convert point coords to screen-space. */
-      const bool is_inside = is_inside_fn(gsc.region, gpstroke_iter.diff_mat, &pt->x, user_data);
+      const bool is_inside = is_inside_fn(gsc.region, gpstroke_iter.diff_mat, &pt_active->x, user_data);
       if (strokemode == false) {
         const bool is_select = (pt_active->flag & GP_SPOINT_SELECT) != 0;
         const int sel_op_result = ED_select_op_action_deselected(sel_op, is_select, is_inside);
